[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ChatBox.gd" type="Script" id=1]

[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
margin_right = -831.0
margin_bottom = -185.0
script = ExtResource( 1 )

[node name="Chat" type="Button" parent="."]
modulate = Color( 0.972549, 0.419608, 0.0862745, 1 )
margin_left = 4.0
margin_top = 190.0
margin_right = 24.0
margin_bottom = 249.0
text = ">"

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.972549, 0.419608, 0.0862745, 1 )
margin_left = 7.0
margin_top = 61.0
margin_right = 207.0
margin_bottom = 388.0

[node name="Chat2" type="Button" parent="Panel"]
margin_left = 194.0
margin_top = 116.0
margin_right = 214.0
margin_bottom = 175.0
text = "<"

[node name="Text_to_send" type="LineEdit" parent="Panel"]
margin_left = 9.0
margin_top = 267.0
margin_right = 191.0
margin_bottom = 291.0

[node name="Send_Button" type="Button" parent="Panel"]
margin_left = 55.0
margin_top = 300.0
margin_right = 158.0
margin_bottom = 320.0
text = "Send Message"

[node name="Text" type="Label" parent="Panel"]
margin_left = 86.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 18.0
text = "Chat"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 8.0
margin_top = 20.0
margin_right = 191.0
margin_bottom = 259.0

[connection signal="pressed" from="Chat" to="." method="_on_Chat_pressed"]
[connection signal="pressed" from="Panel/Chat2" to="." method="_on_Chat2_pressed"]
[connection signal="pressed" from="Panel/Send_Button" to="." method="_on_Send_Button_pressed"]
